Fixed dark mode and added projects & prev work

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
 
 html {
     background: rgb(0, 0, 0);
+    height: 100%;
 }
 
 img {
@@ -138,6 +139,29 @@ body {
     cursor: pointer;
 }
 
+.project {
+    margin: 5px;
+    padding: 10px;
+    border: solid 2px rgba(255, 255, 255, 0.162);
+    border-radius: 15px;
+}
+
+.project-description {
+    width: 50%;
+    margin: 5px;
+}
+.project-title {
+    margin: 0;
+    color: white;
+}
+
+.project-img {
+    width: 50%;
+    height: auto;
+}
+
+
+
 .section {
     border: dotted 2px rgba(255, 255, 255, 0.053);
     margin-left: 100px;
@@ -163,11 +187,16 @@ body {
 
     color: white;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .scrollable {
-    height: 325px;
+    max-height: 325px;
+    min-height: fit-content;
     width:100%;
+    border: dotted 3px rgba(255, 255, 255, 0.121);
+    border-radius: 15px;
+    overflow-x: none;
     overflow-y: auto;
 }
 
@@ -235,7 +264,7 @@ p {
 .entry {
     margin: 5px;
     padding: 10px;
-    border: dotted 2px rgba(255, 255, 255, 0.162);
+    border: solid 2px rgba(255, 255, 255, 0.162);
     border-radius: 15px;
 }
 
@@ -303,9 +332,9 @@ p {
 
 .extras-img {
     border: solid 1px white;
+    border-radius: 15px;
     width: 100%;
     margin: 0;
-    filter:grayscale(100%);
 }
 
 .entry-icon {
@@ -320,6 +349,14 @@ p {
     text-align: center;
     color: white;
     width: 100%;
+}
+
+@media screen and (min-width: 1750px){
+    .section {
+        width: 80%;
+        margin: auto;
+    }
+
 }
 
 @media screen and (max-width: 1600px){
@@ -365,6 +402,9 @@ p {
         width: 100%;
         height: 100%;
         margin: 0;
+    }
+    .scrollable {
+        border: dotted 2px rgba(255, 255, 255, 0.121);
     }
 }
 
